[package]
name = "iedb-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "macros", "sync", "fs", "io-util", "time"] }
hyper = { version = "1", default-features = false, features = ["server", "http1"] }
hyper-util = "0.1"
bitcode = { version = "0.6", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parquet = { version = "53", default-features = false, features = ["snap", "flate2"] }
influxdb-line-protocol = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
aws-sigv4 = "1"
http = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
url = "2"
http-body-util = "0.1"
bytes = "1"
chrono = "0.4"
crc32fast = "1"
